# dtc-mlops-capstone-project

./: .gitignore  README.md  assessment-form.md  docker-compose.yaml  example.env  pyproject.toml
.github/workflows/: aws-cloudformation-prefect-service.yml  aws-service-deployment.yml  build-and-ecr-push-experiment-tracking.yml  build-and-ecr-push-model-serving.yml  build-and-ecr-push-services.yml  build-experiment-tracking.yml  cloudformation-delete-resources.yml  cloudformation-deploy-mlflow.yml  cloudformation-deploy-prefect-agent.yml  delete-resources.yml  mlflow-step-1-cloudformation.yml  model-serving-build-deploy.yml  prefect-agent-deploy.yml  prefect-infra-creation.yml  prefect-step-1-cloudformation.yml  prefect-step-2-flow-deployments.yml  prefect-workflow-deployment.yml  workflow-deployment-prefect.yml
deployment/: README.md
deployment/web_service/: Dockerfile
experiment_tracking/: Dockerfile  pyproject.toml
infrastructure/: .terraform.lock.hcl  README.md  locals.tf  main.tf  outputs.tf  providers.tf  state.tf  variables.tf
infrastructure/cdk-templates/: app.py  pyproject.toml
infrastructure/modules/ecs-fargate/: iam.tf  load_balancer.tf  main.tf  networking.tf  variables.tf
infrastructure/modules/ecs-service/: alb.tf  iam.tf  log.tf  outputs.tf  service.tf  variables.tf
infrastructure/modules/mlflow-service/: alb.tf  ecr.tf  iam.tf  network.tf  rds.tf  service.tf  variables.tf
infrastructure/modules/prefect-service/: iam.tf  locals.tf  logging.tf  networking.tf  service.tf  variables.tf
infrastructure/templates/: ecs_cluster_mlflow_service.yml  ecs_cluster_prefect_agent.yml
model_serving/: README.md
model_serving/web_service/: Dockerfile  constants.py  fastapi_app.py  pyproject.toml
workflow_orchestration/: Dockerfile  Dockerfile - mlflow  LSTM-poems.ipynb  README.md  constants.py  datalake_flow.py  deployment.py  model_flow.py  pyproject.toml
workflow_orchestration/flows/: datalake_flow.py  model_flow.py
